--- a/index.html
+++ b/index.html
@@ -149,6 +149,111 @@ Start coding from here
 
 
         </ul>
+
+        <div class="page-header" id="books">
+            <h2 class="text-capitalize">BOOKS</h2>
+        </div>
+        <div>
+            <h3>BILL GATES</h3>
+            <h4>
+                <mark class="header_pro">
+                    <i>
+                        <sup>
+                            <i class="fa fa-quote-left"></i>
+                        </sup>
+                        READING IS THE STILL MAIN WAY
+                        <sup>
+                            <i class="fa fa-quote-right"></i>
+                        </sup>
+                    </i>
+
+                </mark>
+            </h4>
+        </div>
+        <div class="page-header">
+            <h2 class="text-capitalize">LIST OF BOOKS</h2>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" data-toggle="modal" data-target="#book1">
+            <img src="s1.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">First Space Encyclopaedia</p>
+        </div>
+        <div class="modal fade" id="book1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">first space encylopaedia</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img src="s1.jpg" class="img-responsive">
+                        <p>Zoom off into the galaxy and investigate all the planets, from Earth to Mars with First Space Encyclopaedia. Packed full of stunning photography, quizzes and amazing facts, children will become space experts in no time. Covering everything from observatories and rockets, to the solar system and the death of stars, children will discover all about space and space travel.</p>
+                        <a href="https://www.amazon.in/First-Space-Encyclopaedia-DK/dp/0241293421/ref=sr_1_6?crid=176WU3JFDK2JP&keywords=books+on+space+for+kids&qid=1575444723&sprefix=books+on%2Caps%2C285&sr=8-6" target="_blank">buy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" data-toggle="modal" data-target="#book2">
+            <img src="s2.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">Man on the Moon (Picture Puffins)</p>
+        </div>
+        <div class="modal fade" id="book2">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Man on the Moon (Picture Puffins)</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img src="s2.jpg" class="img-responsive">
+                        <p>It was 1969 and no one had ever set foot on the moon. Some said it couldn't be done. But astronauts Mike Collins, Buzz Aldrin, and Neil Armstrong were going to try . . . Here in picture book format is the amazing true story of the first moon landing, when a man set foot on an unexplored world and showed us that the boundaries of our world were limitless."[A] perfect introduction to space, the space program, and exploration. Thrilling!" (Kirkus Reviews)"The milestone event [is] a great idea for a picture book!</p>
+                        <a href="https://www.amazon.in/Moon-Picture-Puffins-Anastasia-Suen/dp/0140565981/ref=sr_1_2_sspa?crid=176WU3JFDK2JP&keywords=books+on+space+for+kids&qid=1575444723&sprefix=books+on%2Caps%2C285&sr=8-2-spons&psc=1&smid=A3H3WE9M6NY1KV&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzTVBPRUUyMlg5TU9XJmVuY3J5cHRlZElkPUEwMjUyOTM3MU9XVklaVFdUMk9GUSZlbmNyeXB0ZWRBZElkPUEwNDAwNTE1T1JZSVhWWDM3NTlMJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" target="_blank">buy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" data-toggle="modal" data-target="#book3">
+            <img src="s3.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">Space Encyclopaedia</p>
+        </div>
+        <div class="modal fade" id="book3">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Space Encyclopaedia</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img src="s3.jpg" class="img-responsive">
+                        <p>The universe is bigger than you can ever imagine and it is full of fascinating facts that will astound you! This Space. Encyclopaedia is your guide to the infinite wonders of outer space. Browse through the pages and know more about galaxies, planets, stars and much, much more!</p>
+                        <a href="https://www.amazon.in/Space-Encyclopaedia-Books-Editorial-Team/dp/9384625957/ref=sr_1_7?crid=176WU3JFDK2JP&keywords=books+on+space+for+kids&qid=1575444723&sprefix=books+on%2Caps%2C285&sr=8-7">buy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" data-toggle="modal" data-target="#book4">
+            <img src="s4.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">There's No Place Like Space</p>
+        </div>
+        <div class="modal fade" id="book4">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">There's No Place Like Space</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <img src="s4.jpg" class="img-responsive">
+                        <p>Au revoir, Pluto! In this beloved revised classic, beginning readers and budding astronomers are launched on a wild trip to visit the eight planets in our solar system (per the International Astronomical Union’s 2006 decision to downgrade Pluto from a planet to a dwarf planet), along with the Cat in the Hat, Thing One, Thing Two, Dick, and Sally. It’s a reading adventure that’s out of this world!</p>
+                        <a href="https://www.amazon.in/Theres-No-Place-Like-Space/dp/0679891153/ref=sr_1_9?crid=176WU3JFDK2JP&keywords=books+on+space+for+kids&qid=1575444723&sprefix=books+on%2Caps%2C285&sr=8-9">buy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
@@ -172,6 +277,4 @@ Start coding from here
     </section>
 
 
-</body>
-
-</html>
+</body></html>
